Reworked routes handling, added external api support, separated groups and songs, separated db connection and migrations, and more
